--- a/pesquisa.phtml
+++ b/pesquisa.phtml
@@ -5,20 +5,26 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-	<?php session_start(); $results = $_SESSION['results']; $pages = $_SESSION['pages']; $atual = $_GET['page'];?>
+	<?php session_start(); $results = $_SESSION['results'];?>
 </head>
 <body>
 <div class="container" style="margin-top:10px;">
 <?php require_once('menu.html');?>
 	<div class="panel">
 		<div class="panel-heading">
-		<?php include("pagination.phtml"); ?>
-
-		<?php // ------------------------------Resultados - FIlmes ------------------------------------------- // ?>
-
+		<table class="table table-striped">
+			<tr>
+			<td >Pesquisar: </td>
+			<td><form method="get" action="porAproximacao.php"><input class="form-control" type="text" name="busca" id="codigo" min="11"></td>
+			<td><button type="submit" class="btn btn-primary">Search</button></form></td>	
+			</tr>
+		</table>
 		</div>
+		<?php // ------------------------------Resultados - FIlmes ------------------------------------------- // ?>
 		<div class="panel-body">
-			<?php foreach ($results as $key=>$result): ?>
+			<?php 
+			if(!empty($results)) :
+			foreach ($results as $key=>$result): ?>
 			<table class="table table-striped">
 				<tr>
 					<td style="font-weight:bold"><input class="form-control" disabled type="text" value="<?=$result->original_title?>"></td>	
@@ -33,11 +39,10 @@
 					<td><input class="form-control" disabled type="text" value="<?=$result->vote_average?>"></td>	
 				</tr>
 			</table>
-			<?php endforeach; ?>
+			<?php endforeach; endif; session_destroy();?>
 			<?php // ----------------------------------------------------------------------------------------- // ?>
-			<?php include("pagination.phtml"); session_destroy(); ?>
 		</div>
    </div>
-</div>
+ </div>
 </body>
 </html>
