--- a/Views/pesquisa.phtml
+++ b/Views/pesquisa.phtml
@@ -5,38 +5,39 @@
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
 	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
-	<?php session_start(); $results = $_SESSION['results'];?>
+	<?php session_start(); $data = $_SESSION['data'];?>
 </head>
 <body>
 <div class="container" style="margin-top:10px;">
-<?php require_once('menu.html');?>
+<?php require_once('Layouts/menu.phtml');?>
 	<div class="panel">
 		<div class="panel-heading">
 		<table class="table table-striped">
 			<tr>
 			<td >Pesquisar: </td>
-			<td><form method="get" action="porAproximacao.php"><input class="form-control" type="text" name="busca" id="codigo" min="11"></td>
+			<td><form method="get" action="../Controllers/porAproximacao.php"><input class="form-control" type="text" name="busca" id="codigo" min="11"></td>
 			<td><button type="submit" class="btn btn-primary">Search</button></form></td>	
 			</tr>
 		</table>
 		</div>
-		<?php // ------------------------------Resultados - FIlmes ------------------------------------------- // ?>
+		<?php // ------------------------------valueados - FIlmes ------------------------------------------- // ?>
 		<div class="panel-body">
 			<?php 
-			if(!empty($results)) :
-			foreach ($results as $key=>$result): ?>
+
+			if(!empty($data)) :
+			foreach ($data->results as $value): ?>
 			<table class="table table-striped">
 				<tr>
-					<td style="font-weight:bold"><input class="form-control" disabled type="text" value="<?=$result->original_title?>"></td>	
+					<td style="font-weight:bold"><input class="form-control" disabled type="text" value="<?=$value->original_title?>"></td>	
 				</tr>
 				<tr>
-					<td><input class="form-control" disabled type="text" value="<?=$result->release_date?>"></td>	
+					<td><input class="form-control" disabled type="text" value="<?=$value->release_date?>"></td>	
 				</tr>
 				<tr>
-					<td><input class="form-control" disabled type="text" value="<?=$result->overview?>"></td>	
+					<td><input class="form-control" disabled type="text" value="<?=$value->overview?>"></td>	
 				</tr>
 				<tr>
-					<td><input class="form-control" disabled type="text" value="<?=$result->vote_average?>"></td>	
+					<td><input class="form-control" disabled type="text" value="<?=$value->vote_average?>"></td>	
 				</tr>
 			</table>
 			<?php endforeach; endif; session_destroy();?>
