--- a/Views/Layouts/cabecalho.phtml
+++ b/Views/Layouts/cabecalho.phtml
@@ -1,3 +1,18 @@
+<html>
+<head>
+<style>
+
+
+</style>
+</head>
+  <title>ApiCon TheMovie</title>
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
+  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+</head>
+<body>
+<div class="container" style="margin-top:10px;">
+
  <nav class="navbar navbar-default">
    <div class="container">
             <div class="navbar-header">
@@ -11,8 +26,9 @@
             </div>
             <div class="navbar-collapse collapse">
               <ul class="nav navbar-nav">
-                <li class="active"><a href="../index.phtml">Home</a></li>
+                <li class="active"><a href="../index.php">Home</a></li>
                 <li><a href="codigo.phtml">Codigo</a></li>
+                <li><a href="toprated.phtml">Avaliação</a></li>
                 <li><a href="pesquisa.phtml">Pesquisar</a></li>
                 <li><a href="popularidade.phtml">Popularidade</a></li>
               </ul>
