--- a/Views/codigo.phtml
+++ b/Views/codigo.phtml
@@ -1,15 +1,7 @@
-<html>
-<head>
-</head>
-	<title>ApiCon TheMovie</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<?php require_once('Layouts/cabecalho.phtml');?>
+
 	<?php session_start(); $data = $_SESSION['data']; ?>
-</head>
-<body>
-<div class="container" style="margin-top:10px;">
-<?php require_once('Layouts/menu.phtml');?>
+	
 	<div class="panel">
 	<div class="panel-heading">
 		<table class="table table-striped">
@@ -48,7 +40,7 @@
 	</tr>
 </table>
 <br>
-<?php session_destroy(); /*echo '<pre>'; var_dump($data);*/ ?>
+<?php session_destroy(); echo '<pre>'; var_dump($data); ?>
 </div>
 </div>
 </div>
