--- a/Views/pesquisa.phtml
+++ b/Views/pesquisa.phtml
@@ -1,15 +1,6 @@
-<html>
-<head>
-</head>
-	<title>ApiCon TheMovie</title>
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap-theme.min.css">
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
+<?php require_once('Layouts/cabecalho.phtml');?>
+
 	<?php session_start(); ?>
-</head>
-<body>
-<div class="container" style="margin-top:10px;">
-<?php require_once('Layouts/menu.phtml');?>
 	<div class="panel">
 		<div class="panel-heading">
 		<table class="table table-striped">
@@ -36,16 +27,35 @@
 			foreach ($var->results as $value): ?>
 			<table class="table table-striped">
 				<tr>
-					<td style="font-weight:bold"><input class="form-control" disabled type="text" value="<?=$value->original_title?>"></td>	
-				</tr>
-				<tr>
-					<td><input class="form-control" disabled type="text" value="<?=$value->release_date?>"></td>	
-				</tr>
-				<tr>
-					<td><input class="form-control" disabled type="text" value="<?=$value->overview?>"></td>	
-				</tr>
-				<tr>
-					<td><input class="form-control" disabled type="text" value="<?=$value->vote_average?>"></td>	
+				<td style="width:90%">
+					<table class="table table-striped">
+						<tr>
+							<td>Título</td>
+							<td style="font-weight:bold"><input class="form-control" disabled type="text" value="<?=$value->original_title?>"></td>	
+						</tr>
+						<tr>
+							<td>Lançamento</td>
+							<td><input class="form-control" disabled type="text" value="<?=$value->release_date?>"></td>	
+						</tr>
+						<tr>
+							<td>Avaliação</td>
+							<td><input class="form-control" disabled type="text" value="<?=$value->vote_average?>"></td>	
+						</tr>
+						<tr>
+						<td>Popularidade</td>
+							<td><input class="form-control" disabled type="text" value="<?=$value->popularity?>"></td>	
+						</tr>
+					</table>
+				</td>
+				<?php if(!empty($value->backdrop_path)): ?>
+				<td>
+					<img style="border:2px solid grey; border-radius:10px;" src="https://image.tmdb.org/t/p/w342/<?=$value->backdrop_path?>">
+				</td>
+				<?php else: ?>
+				<td>
+					<img style="border:2px solid grey; border-radius:10px;" src="../Images/no-image.png">
+				</td>
+				<?php endif; ?>
 				</tr>
 			</table>
 			<?php endforeach; endif;?>
